# tns_training_tp2

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  SolarSystem.psf  main.cpp  planet_doc_config
Include/cli/: Observer.hpp  Subject.hpp  UserInterface.hpp
Include/mycollections/: Iterator.hpp  MyStaticArray.hpp  MyStaticVector.hpp
Include/planets/: Asteroid.hpp  Astre.hpp  Planet.hpp  Point.hpp  Position.hpp  SolarSystem.hpp  Sphere.hpp  Star.hpp  Vec3.hpp
Include/utils/: Validator.hpp  compat.hpp
Source/: CMakeLists.txt
Source/cli/: CMakeLists.txt  UserInterface.cpp
Source/mycollections/: CMakeLists.txt
Source/planets/: Asteroid.cpp  Astre.cpp  CMakeLists.txt  Planet.cpp  Point.cpp  Position.cpp  SolarSystem.cpp  Sphere.cpp  Vec3.cpp
Source/utils/: CMakeLists.txt  Validator.cpp
libplanet/: CMakeLists.txt  Point.cpp  Point.h  Position.cpp  Position.h  Sphere.cpp  Sphere.h
libplanet/Include/: Astre.h  Astre.hpp  Point.h  Point.hpp  Position.h  Position.hpp  Sphere.h  Sphere.hpp
libplanet/src/: Astre.cpp  Point.cpp  Position.cpp  Sphere.cpp
mycollections/: CMakeLists.txt
mycollections/Include/: Iterator.hpp  MyArray.hpp  MyStaticArray.hpp  MyStaticVector.hpp
mycollections/src/: MyArray.cpp  MyStaticArray.cpp
src/cli/: CMakeLists.txt
src/cli/Include/: UserInterface.hpp
src/cli/src/: UserInterface.cpp
src/libplanet/: CMakeLists.txt
src/libplanet/Include/: Astre.hpp  Point.hpp  Position.hpp  Sphere.hpp
src/libplanet/src/: Astre.cpp  Point.cpp  Position.cpp  Sphere.cpp
src/mycollections/: CMakeLists.txt
src/mycollections/Include/: Iterator.hpp  MyStaticArray.hpp  MyStaticVector.hpp
src/mycollections/src/: MyStaticArray.cpp
src/utils/: CMakeLists.txt
src/utils/Include/: Validator.hpp
src/utils/src/: Validator.cpp
test/: Vec3_test.cpp
